samples/_failures_safe/1761086032_8d9c1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63b1f3d9.c: In function ‘skip_whitespace’:
./samples/SAFE/__tmp_63b1f3d9.c:151:30: error: expected ‘;’ at end of input
  151 |             tokenizer->column
      |                              ^
      |                              ;
./samples/SAFE/__tmp_63b1f3d9.c:151:13: error: expected declaration or statement at end of input
  151 |             tokenizer->column
      |             ^~~~~~~~~
./samples/SAFE/__tmp_63b1f3d9.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_63b1f3d9.c:151:13: error: expected declaration or statement at end of input
